<resources>
    <string name="app_name">DiscoverSatara</string>
    <string name="hotel">Hotel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="startexploring">start_exploring</string>
    <string name="loginIn">Login in</string>
    <string name="login">LOGIN</string>
    <string name="start_exploring">START EXPLORING</string>
    <string name="hotels_symbol">Hotels_symbol</string>
    <string name="explore_hotels_to_stay">Hospitality is simply an Opportunity
    to show Love and Care..!</string>
    <string name="hill_resort_symbol">hill_resort_symbol</string>
    <string name="explore_hill_resorts">We have Best hill resorts to stay</string>
    <string name="explore_restaurants">explore restaurants</string>
    <string name="find_the_best_place_to_stay">**We have Best Hotels for you to Stay**</string>
    <string name="find_the_best_hill_resorts_to_stay">Then, we have **Best Hill Resorts**
        \n that gives you Heaven experience.</string>
    <string name="want_to_stay_with_clouds">Want to Stay with Clouds?</string>
    <string name="now_what_about_food">Nothing brings people together\n like Good Food.</string>
    <string name="find_the_best_veg_and_non_veg_restaurants">We have Best **Veg and
        Non-Veg Restaurants** for foodie people like you.</string>
    <string name="yes_the_last_and_the_best">There is something for everybody\n at PICNIC DAY.</string>
    <string name="explor_heaven_experience_picnic_spots">Heaven experience Picnic Spots</string>
    <string name="being_discover">Be Discover..!</string>
    <string name="discover_satara">Discover Satara</string>
    <string name="appicon">app_icon</string>
    <string name="discover_satara_new">DISCOVER SATARA</string>
    <string name="list_item_symbol">List_item_symbol</string>
    <string name="address">Address</string>
    <!-- Category name for Hotels [CHAR LIMIT=20] -->
    <string name="cat_hotels">Hotels</string>

    <!-- Category name for Hill Resorts [CHAR LIMIT=20] -->
    <string name="cat_hill_resorts">Hill Resorts</string>

    <!-- Category name for Restaurants[CHAR LIMIT=20] -->
    <string name="cat_restos">Restos</string>

    <!-- Category name for Picnic Spots [CHAR LIMIT=20] -->
    <string name="cat_picnic_spots">Picnic Spots</string>
    <string name="being_explorer">Be Explorer..!</string>
    <string name="app_icon">app_icon</string>
    <string name="discover_satara_name">DISCOVER SATARA</string>
    <string name="welcome_satara">WELCOME TO THE SATARA</string>
    <string name="HOTEL_RAJTARA">Hotel Maharaja</string>
    <string name="sat">Satara</string>
    <string name="Gulbahar">Hotel Gulbahar</string>
    <string name="Galaxi">Hotel Galaxi</string>
</resources>
