<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.android.discoversatara.HotelsFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:background=""
        android:contentDescription="@string/hotels_symbol"
        android:layout_margin="20dp"/>

    <TextView
        android:id="@+id/explore_hotels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/now_what_about_food"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:typeface="sans"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/explore_hotels"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/find_the_best_veg_and_non_veg_restaurants"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="italic"/>

</RelativeLayout>
