<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.android.discoversatara.HotelsFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:background="@drawable/hillstation_resort"
        android:contentDescription="@string/hotels_symbol" />

    <TextView
        android:id="@+id/explore_hotels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/want_to_stay_with_clouds"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFE57F"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/explore_hotels"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/find_the_best_hill_resorts_to_stay"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="italic" />


</RelativeLayout>

