<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="com.example.android.discoversatara.HotelsFragment">

    <LinearLayout
        android:id="@+id/picture_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/kaas"
                android:contentDescription="@string/hotels_symbol" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/sajjangad_fort"
                android:contentDescription="@string/hotels_symbol" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/toseghar"
                android:contentDescription="@string/hotels_symbol" />

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_weight="1"
                android:background="@drawable/wind_farm"
                android:contentDescription="@string/hotels_symbol" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/explore_hotels"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture_layout"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/yes_the_last_and_the_best"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#FFE57F"
        android:textStyle="bold"
        android:typeface="sans" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/explore_hotels"
        android:layout_centerInParent="true"
        android:layout_margin="16dp"
        android:gravity="center"
        android:text="@string/explor_heaven_experience_picnic_spots"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@android:color/white"
        android:textStyle="italic" />

</RelativeLayout>


